--- a/docs/overrides/homestyles.css
+++ b/docs/overrides/homestyles.css
@@ -1,23 +1,38 @@
 .md-main {
   flex-grow: 0;
-  height: 0px;
-  overflow: hidden; /* Hide scrollbars */
+  height: 0;
+  overflow: hidden;
 }
+
+.md-main__inner {
+  display: flex;
+  height: 0;
+}
+
+/* .md-container {
+  display: flex;
+  height: 0%;
+
+  background: #4051b5;
+} */
 
 .tx-container {
   padding-top: 0rem;
-  background: linear-gradient(to bottom, var(--md-primary-fg-color), white);
-  height: 77.4vh !important;
-  overflow: hidden; /* Hide scrollbars */
+  background: linear-gradient(
+    to bottom,
+    var(--md-primary-fg-color),
+    /* #407cb5 40%,
+    #40a5b5 70%, */ var(--md-primary-bg-color) 100%
+  );
+  padding-bottom: 9rem;
+  /* height: 73vh; */
+  overflow: hidden;
 }
 
 .tx-hero {
   margin: 32px 2.8rem;
   color: var(--md-primary-bg-color);
   justify-content: center;
-  overflow: hidden; /* Hide scrollbars */
-  display: flex;
-  align-items: center;
 }
 
 .tx-hero h1 {
@@ -27,35 +42,29 @@
 }
 
 .tx-hero__content {
-  padding-bottom: 0rem;
-  overflow: hidden; /* Hide scrollbars */
-  align-items: center;
-  max-width: 25rem;
-  margin-top: 5.5rem;
-  margin-bottom: 3.5rem;
-  margin-left: 1rem;
-  margin-right: 4rem;
+  padding-bottom: 1rem;
+  margin: 0 auto;
 }
 
 .tx-hero__image {
   width: 17rem;
   height: 17rem;
   order: 1;
-  padding-right: 2.5rem;
+  padding-top: 2.5rem;
+  padding-right: 5.5rem;
 }
 
 .tx-hero .md-button {
+  border-radius: 0.4rem;
   margin-top: 0.5rem;
   margin-right: 0.5rem;
   color: var(--md-primary-bg-color);
-  border-radius: 0.3rem;
 }
 
 .tx-hero .md-button--primary {
   background-color: var(--md-primary-bg-color);
   color: hsla(280deg, 37%, 48%, 1);
   border-color: var(--md-primary-bg-color);
-  border-radius: 0.3rem;
 }
 
 .tx-hero .md-button:focus,
@@ -63,6 +72,116 @@
   background-color: var(--md-accent-fg-color);
   color: var(--md-default-bg-color);
   border-color: var(--md-accent-fg-color);
+}
+
+.feature-item h2 svg {
+  height: 30px;
+  float: left;
+  margin-right: 10px;
+  transform: translateY(10%);
+}
+
+.top-hr {
+  margin-top: 42px;
+}
+
+.feature-item {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  box-sizing: border-box;
+  padding: 0 15px;
+  word-break: break-word;
+}
+
+.feature-item h2 {
+  color: #333;
+  font-weight: 300;
+  font-size: 25px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: normal;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: inherit;
+}
+
+.feature-item p {
+  font-size: 16px;
+  line-height: 1.8em;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  color: #111;
+  margin: 0 0 10px;
+  display: block;
+}
+
+@media screen and (max-width: 30em) {
+  .tx-hero h1 {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .md-sidebar--secondary {
+    display: none;
+  }
+
+  .tx-hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .tx-hero__content {
+    max-width: 22rem;
+    margin-top: 3.5rem;
+    margin-bottom: 3.5rem;
+    margin-left: 1rem;
+    margin-right: 4rem;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 76.25em) {
+  .md-sidebar--primary {
+    display: none;
+  }
+
+  .top-hr {
+    width: 100%;
+    display: flex;
+    max-width: 61rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0 0.2rem;
+  }
+
+  .bottom-hr {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    max-width: 61rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0 0.2rem;
+  }
+
+  .feature-item {
+    flex: 1;
+    min-width: 0;
+  }
+
+  .feature-item:hover {
+    background-color: #526cfe47;
+    border-radius: 3px;
+  }
+}
+
+.hr {
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  margin: 20px 0;
 }
 
 .text-center {
@@ -78,17 +197,33 @@
   padding-bottom: 10px;
 }
 
-.md-nav__item {
-  display: none;
+.logos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row wrap;
+  margin: 0 auto;
 }
 
-.md-nav__item--active {
-  display: none;
+.logos img {
+  flex: 1 1 auto;
+  padding: 25px;
+  max-height: 130px;
+  vertical-align: middle;
 }
 
-.md-nav--lifted {
-  display: none;
+.hr-logos {
+  margin-top: 0;
+  margin-bottom: 30px;
 }
-.md-nav__list {
-  display: none;
+
+.md-footer-meta__inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.md-footer-social {
+  padding-top: 20px;
 }
